# leek-manager

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/endpoints/: auth.py  backtest.py  config.py  dashboard.py  datasources.py  executors.py  factor_evaluation.py  factors.py  label_generators.py  model_training.py  models.py  order.py  performance.py  position.py  projects.py  rbac.py  risk.py  signal.py  strategies.py  trainers.py  transaction.py  users.py
app/core/: config.py  config_manager.py  engine.py  leek_loop.py  scheduler.py  security.py  template_manager.py
app/db/: init_db.py  session.py
app/middlewares/: system_permission.py
app/models/: asset_snapshot.py  backtest.py  backtest_config.py  balance_transaction.py  base.py  datasource.py  execution.py  factor.py  factor_evaluation.py  label_generator.py  model.py  model_training_task.py  order.py  position.py  project.py  project_config.py  rbac.py  risk_log.py  risk_policy.py  signal.py  strategy.py  trainer.py  user.py
app/schemas/: asset_snapshot.py  backtest.py  common.py  datasource.py  enums.py  executor.py  factor.py  factor_evaluation.py  label_generator.py  model.py  model_training.py  order.py  position.py  project.py  rbac.py  risk.py  risk_log.py  signal.py  strategy.py  template.py  token.py  trainer.py  transaction.py  user.py
app/script/: okx_data_download.py
app/service/: asset_snapshot_service.py  cache.py  enhanced_backtest_service.py  factor_evaluation_service.py  model_training_service.py  performance_service.py  risk_log_service.py  walk_forward_service.py
app/utils/: data_processor.py  json_sanitize.py  permission_scanner.py  series_codec.py
migrations/: env.py
migrations/versions/: 02fb47ee65c1_change_id_fields_to_bigint_v2.py  068307b1c628_init.py  1dba12fd5771_backtest_time_metrics.py  2b28e0bc0951_init.py  35b47490ebe3_init.py  49ba2e5fe232_risk_logs.py  4f6cb11c7770_factor.py  50823acab822_alpha_eval.py  5e0057ae4a3b_init.py  6189d0fea6a4_value_performence.py  8f7a4518b104_risk_policy.py  a1b2c3d4e5f6_add_model_feature_config.py  add_asset_snapshots_table.py  b2a313dfd7fb_virtual_pos.py  c376c84d11f1_factor_eval.py  e540958e82ae_add_long_short_win_rate.py  f4cee0271a9c_ml.py
static/: index.html
static/assets/: Backtest-abe2b857.css  Backtest-b7e0f345.js  BacktestRecords-84e91b18.js  BacktestRecords-f0947e6e.css  Config-46108715.js  Config-f17b95bc.css  DataSource-6e4eba38.css  DataSource-d659cd7e.js  DynamicForm-acfb258d.css  DynamicForm-adccf113.js  ExecutionInfo-01812c71.css  ExecutionInfo-f5c9c94e.js  Home-2873bcd7.css  Home-c070ef39.js  Login-504b752c.css  Login-e71a7161.js  Order-7912af6d.js  Order-c2065cf0.css  Overview-89d7df23.js  Overview-8e52f6dc.css  Position-a6f5f990.js  Position-dc5dbf38.css  PositionSetting-3bfcc347.js  PositionSetting-3fff333e.css  RoleManagement-423dff6f.css  RoleManagement-564e48e1.js  RouteConfig-2471e9c8.js  RouteConfig-7635fca8.css  Setting-0eaadde3.js  Setting-b6fbd119.css  Signal-8b70cea5.css  Signal-e896ba94.js  Strategy-5584755c.js  Strategy-e7df4024.css  Trade-0e0244e2.js  Trade-c11e997c.css  UserManagement-49840921.js  UserManagement-bc3b2b45.css  backtest-197f7971.js  config-a0f2273b.js  (+13 more)
