[tool.poetry]
name = "leek-manager"
version = "1.7.10"
description = "Leek Manager Service - 量化交易管理系统"
authors = ["shenglin.li <764935704@qq.com>"]
readme = "README.md"
package-mode = false
homepage = "https://github.com/shenglin-li/leek"
repository = "https://github.com/shenglin-li/leek"
documentation = "https://github.com/shenglin-li/leek"
keywords = [
    "quantitative trading",
    "algorithmic trading",
    "finance",
    "investment",
    "trading system",
    "management system"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Chinese (Simplified)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: FastAPI",
]

[tool.poetry.dependencies]
python = ">=3.11,<4"
fastapi = "0.109.2"
uvicorn = "0.27.1"
pydantic = "~=2.11.7"
pydantic-settings = "~=2.10.1"
python-dotenv = "~=1.1.0"
sqlalchemy = "~=2.0.27"
python-jose = "3.3.0"
python-multipart = "0.0.9"
werkzeug = "~=3.0.1"
alembic = "1.15.2"
pymysql = "~=1.1.0"
tomli = "~=2.0.1"
apscheduler = "~=3.10.4"
grpcio = "~=1.74.0"
grpcio-tools = "~=1.74.0"
protobuf = "~=6.31.1"
lz4 = "~=4.4.4"
watchdog = "~=4.0.1"
leek-core = { path = "../leek-core", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "~=7.4.4"
black = "~=24.4.2"
isort = "~=5.13.2"
flake8 = "~=7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3 

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "huawei"
url = "https://mirrors.huaweicloud.com/repository/pypi/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
priority = "supplemental"

# [[tool.poetry.source]]
# name = "douban"
# url = "https://pypi.douban.com/simple/"
# priority = "supplemental"

[[tool.poetry.source]]
name = "ustc"
url = "https://pypi.mirrors.ustc.edu.cn/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "pypi"
priority = "supplemental"
